--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.30",
-    "prisma": "6.7.0",
+    "prisma": "^6.7.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.7",
